--- a/Front End/295-react-props/index.html
+++ b/Front End/295-react-props/index.html
@@ -1,13 +1,15 @@
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <title>React App</title>
-      <link rel="stylesheet" href="/styles.css" />
-    </head>
-    
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/index.jsx"></script>
-  </body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <title>Contact</title>
+  <link rel="stylesheet" href="/styles.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <input id="fName" placeholder="Enter your first name" value="HeiSupay" type="text">
+  <script type="module" src="/src/index.jsx"></script>
+</body>
+
+</html>
