--- a/Project/TinDog Project/index.html
+++ b/Project/TinDog Project/index.html
@@ -151,6 +151,8 @@
     </div>
     </div>
   </section>
+
+
   <!-- Pricing -->
   <section id="pricing">
     <div class="container">
@@ -160,7 +162,7 @@
         </h2>
         <p class="fs-5 text-body-secondary">
           Simple and affordable price plans for you and your cat.
-        </p>
+
       </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
@@ -203,13 +205,13 @@
               <h4 class="my-0 fw-normal">Mastiff</h4>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary">/mo</small></h1>
+              <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Pirority Listing</li>
                 <li>Unlimeted Mathes & Messages</li>
                 <li>Unlimited App Usage</li>
               </ul>
-              <button class="w-100 btn btn-lg btn dark">Contact Us</button>
+              <button type="button" class="w-100 btn btn-lg btn-dark">Contact Us</button>
 
             </div>
           </div>
@@ -218,6 +220,8 @@
     </div>
 
   </section>
+
+
   <!-- Footer -->
   <section id="contact" class="gradient-background">
     <div class="container">
