--- a/Project/Project 1 Online Resume/index.html
+++ b/Project/Project 1 Online Resume/index.html
@@ -16,15 +16,13 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Multimedia, Programming - Stt Ybsi</li>
+    <li>Multimedia and Programming </li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
   <ul>
     <li> <b> Photo Editor</b></li>
-    <p>Internship - Afdet Photophy & Videography</p>
-    <p>May-Aug
-      2017</p>
+    <p>Internship Photos & Videography</p>
     <ul>
       <li>
         <p>Edit photos for wedding albums</p>
@@ -36,17 +34,14 @@
   </ul>
   <ul>
     <li><b>Graphic Design</b></li>
-    <p>Internship - Rony Graphic Design</p>
-    <p>Jun- Aug
-      2019</p>
+    <p>Internship - Graphic Design</p>
     <ul>
       <li>
         <p>As a graphic designer to create printing design needs</p>
       </li>
     </ul>
     <li><b>Teacher Graphic Design</b></li>
-    <p>Part Time - Stt Ybsi</p>
-    <p>Jul 2019 - Feb 2022</p>
+    <p>Part Time - Campus</p>
     <ul>
       <li>
         Teaches graphic design and visual communication
@@ -55,11 +50,10 @@
     </ul>
     <br>
     <li><b>Video Editor</b></li>
-    <p>Part Time - Holla.Ent</p>
-    <p>Jun - Aug 2023</p>
+    <p>Part Time </p>
     <ul>
       <li>
-        Teaches graphic design and visual communication
+        Video editing for media
       </li>
     </ul>
     <hr>
@@ -68,6 +62,7 @@
       <li>Art</li>
       <li>Design</li>
       <li>Photography</li>
+      <li>Programming</li>
     </ul>
     <hr>
     <h3>Skills</h3>
@@ -81,7 +76,7 @@
     <hr>
 
     <footer>
-      <p>© 2024 supay</p>
+      <p>Copyright © 2024 supay</p>
     </footer>
 </body>
 
