--- a/Basic Program/11.0 Bootstrap Intro/index.html
+++ b/Basic Program/11.0 Bootstrap Intro/index.html
@@ -28,8 +28,7 @@
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime fuga repellendus odio
-            animi eum, magnam delectus quos rem. Vitae praesentium illum, consectetur possimus itaque nostrum labore
-            voluptate voluptatem quam necessitatibus.</p>
+            animi eum, magnam delectus quos rem. Vitae praesentium illum</p>
           <a href="#" class="btn btn-primary">Go Somewhere</a>
         </div>
       </div>
