--- a/Basic Program/11.2 Bootstrap Components/index.html
+++ b/Basic Program/11.2 Bootstrap Components/index.html
@@ -40,7 +40,7 @@
               aria-expanded="false">Service</a>
             <ul class="dropdown-menu">
               <li>
-                <a href="#" class="dropdown-item">Active</a>
+                <a href="#" class="dropdown-item">Action</a>
               </li>
               <li> <a class="dropdown-item">Another action</a></li>
               <li>
@@ -54,7 +54,7 @@
             </ul>
           </li>
         </ul>
-        <form action="" class="d-flex" role="search">
+        <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Postcode" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Check
           </button>
@@ -62,8 +62,8 @@
         </form>
       </div>
     </div>
-
   </nav>
+
   <div class="px-4 pt-5 my-5 text-center border-buttom">
     <h1 class="display-4 fw-bold text-body-emphasis">Move With Supay</h1>
     <div class="col-lg-6 mx-auto">
@@ -76,12 +76,12 @@
       </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Get a Quote</button>
-        <button type="button" class="btn-outline-secondary btn-lg px-4">Contact Us</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contact Us</button>
       </div>
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
       <div class="container px-5">
-        <img src="./moving-van.jpg" alt="Example image" width="700" height="700" loading="lazy">
+        <img src="moving-van.jpg" alt="Example image" width="700" height="500" loading="lazy">
       </div>
     </div>
   </div>
@@ -92,7 +92,7 @@
       <div class="feature col">
         <div
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <img src="./briefcase.svg" alt="briefcase" height="30">
+          <img src="briefcase.svg" alt="briefcase" height="30">
         </div>
         <h3 class="fs-2">
           Professional
@@ -105,13 +105,13 @@
           care and
           attention.</p>
         <a href="#" class="icon-link">Get a quote
-          <img src="./chevron-right.svg" alt="chevron-right">
+          <img src="chevron-right.svg" alt="chevron-right">
         </a>
       </div>
       <div class="feature col">
         <div
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <img src="./bus-front.svg" alt="bus-front" height="30">
+          <img src="bus-front.svg" alt="bus-front" height="30">
         </div>
         <h3 class="fs-2
         ">Countrywide
@@ -125,13 +125,13 @@
           rate for our services.
         </p>
         <a href="#" class="icon-link">Get a quote
-          <img src="./chevron-right.svg" alt="chevron-right">
+          <img src="chevron-right.svg" alt="chevron-right">
         </a>
       </div>
       <div class="feature col">
         <div
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <img src="./chat-square-heart.svg" alt="chat-square-heart" height="30">
+          <img src="chat-square-heart.svg" alt="chat-square-heart" height="30">
         </div>
         <h3 class="fs-2">Personal Touch</h3>
         <p>At our core, we believe that moving should be an exciting and positive experience, not a stressful one. By
@@ -142,7 +142,7 @@
           your next
           move.</p>
         <a href="#" class="icon-link">Get a quote
-          <img src="./chevron-right.svg" alt="chevron-right">
+          <img src="chevron-right.svg" alt="chevron-right">
         </a>
       </div>
     </div>
@@ -157,15 +157,16 @@
         <button type="button" data-bs-slide-target="#carouselExampleIndicators" data-bs-slide-to="2"
           aria-label="Slide 3"></button>
       </div>
+
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./couple.jpg" alt="couple" class="d-block">
+          <img src="couple.jpg" alt="couple" class="d-block w-100">
         </div>
         <div class="carouser-item">
-          <img src="./dog.jpg" alt="dog" class="d-blog w-100">
+          <img src="dog.jpg" alt="dog" class="d-blog w-100">
         </div>
         <div class="carousel-item">
-          <img src="./family.jpg" alt="family" class="d-block w-100">
+          <img src="family.jpg" alt="family" class="d-block w-100">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-slide-target="#carouselExampleIndicators"
