--- a/Project/TinCat Project/index.html
+++ b/Project/TinCat Project/index.html
@@ -124,7 +124,7 @@
             "I no longer have to sniff other cats for love. I've found the hottest Corgi on
             TinCat. Woof."
           </h2>
-          <img src="./images/Cat.jpeg" class="profile-img" alt="cat image">
+          <img src="images/Cat.jpeg" class="profile-img" alt="cat image">
           <p class=" col-lg-8 mx-auto lead mt-2">
             Bandung, Indonesia
           </p>
