--- a/Front End/286-react-components/index.html
+++ b/Front End/286-react-components/index.html
@@ -2,12 +2,12 @@
   <html lang="en">
     <head>
       <title>JSX</title>
-      <link rel="stylesheet" href="/styles.css" />
+      <link rel="stylesheet" href="styles.css" />
     </head>
     
     <body>
       <div id="root"></div>
-      <script type="module" src="/src/index.jsx"></script>
+      <script type="module" src="src/index.jsx"></script>
   </body>
 </html>
 
